Removes Testing Code

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,13 @@ jobs:
           npm install
       - run: |
           npm run all
-  test: # make sure the action works on a clean machine without building
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./
-        with:
-          bot_token: ${{ secrets.BOT_TOKEN }}
-          chat_id: ${{ secrets.CHAT_ID }}
-          first_reminder: 2 # remind me 2 days before birthday
-          second_reminder: 4 # remind me 4 days before birthday
+  # test: # make sure the action works on a clean machine without building
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: ./
+  #       with:
+  #         bot_token: ${{ secrets.BOT_TOKEN }}
+  #         chat_id: ${{ secrets.CHAT_ID }}
+  #         first_reminder: 2 # remind me 2 days before birthday
+  #         second_reminder: 4 # remind me 4 days before birthday
